# fintrack-ai

./: .gitignore  README.md  app.py  client1.py  pyproject.toml  requirements.txt
