[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
